Fix menu behind header

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -135,7 +135,7 @@
 
     .nav-links.open {
         display: flex;
-        margin-bottom: 10px;
+        z-index: 1;
     }
 
     .nav-links.open li {
